# Andor3Capture

./: .gitignore  A3C.cpp  A3C.i  CMakeLists.txt  atcore.h  atfunc.cpp  libatcore.so.3.10.30003.5  main.cpp  main.i  queue.cpp  semaphore.cpp
src/: A3C.cpp  A3C.i  Zyla.cpp  Zyla.i  atfunc.cpp  main.cpp  queue.cpp  semaphore.cpp
src/python/: PyZyla.py  andor3.ui  editTracks.ui  zylaui.py
